# my-portfolio

./: .gitignore  README.md  TODO.txt  generate_page.py  index.html  pyproject.toml
portfolio_data/: index.template.html  projects.json  static.json
portfolio_website/: index.html
portfolio_website/static/: style.css
static/: style.css
tests/: test_generate_page.py
